# Marifer

./: .gitignore  README.md  analysis.py  analyze.py  data.py  main.py  marifer.py  model.py  parse.py  pyproject.toml  qm9_molecule_size_distribution.csv  readme.md  test-smiles.txt  validation-smiles.txt  visualization.py
.github/workflows/: pylint.toml  pylint.yml
analyze/: qm9_nodes_distribution.csv
data/: train-smiles.txt
model/: G_atomization.txt  SMILES.txt  summary-A.txt  summary-B.txt  summary-C.txt  summary-Cv.txt  summary-G.txt  summary-G_atomization.txt  summary-H.txt  summary-H_atomization.txt  summary-U.txt  summary-U0.txt  summary-U0_atomization.txt  summary-U_atomization.txt  summary-alpha.txt  summary-gap.txt  summary-homo.txt  summary-lumo.txt  summary-mu.txt  summary-r2.txt  summary-zpve.txt  summary.txt  test-A.txt  test-B.txt  test-C.txt  test-Cv.txt  test-G.txt  test-G_atomization.txt  test-H.txt  test-H_atomization.txt  test-U.txt  test-U0.txt  test-U0_atomization.txt  test-U_atomization.txt  test-alpha.txt  test-gap.txt  test-homo.txt  test-lumo.txt  test-mu.txt  test-r2.txt  (+39 more)
output/: graph-variations.txt  output-molecules.txt  output-results.txt  output.txt  string-variations.txt
