[project]
name = "Marifer"
version = "0.0.1"
description = "PLACEHOLDER"
requires-python = "==3.11.11"
dependencies = [
    "apache-beam>=2.63.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "mlcroissant>=1.0.14",
    "rdkit>=2024.9.5",
    "tensorflow>=2.18.0",
    "tensorflow-cpu>=2.18.0",
    "tfds-nightly>=4.9.7.dev202503120044",
]
