[project]
name = "Marifer"
version = "0.0.3"
description = "Machine Learning & Molecular Design"
requires-python = "==3.12.9"
dependencies = [
    "apache-beam", # tfds build qm9/dimenet
    "mlcroissant", # tfds build qm9/dimenet
    "tensorflow-datasets", # tfds build qm9/dimenet, data.py
    "matplotlib", # model.py
    "tensorflow-cpu", # model.py
    "rdkit" # analysis.py
]
